--- a/Demos/demos-full/todo-app-react-pavo-etc-main/package.json
+++ b/Demos/demos-full/todo-app-react-pavo-etc-main/package.json
@@ -1,15 +1,14 @@
 {
-  "name": "demos-app",
+  "name": "todo-app-react-pavo-etc",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
-    "moment": "^2.29.3",
+    "nanoid": "^4.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
